# BoostLogger

./: .gitignore  CMakeLists.txt  README.md  buildBoost_VS16W64.bat  main1.cpp  main2.cpp
